[gd_scene load_steps=19 format=3 uid="uid://c7fivadu2uxqg"]

[ext_resource type="Script" path="res://scenes/ui/meta_upgrade_card.gd" id="1_jcci8"]
[ext_resource type="PackedScene" uid="uid://xewnqnrkwdl4" path="res://scenes/components/RandomHitSoundComponent.tscn" id="2_35k3o"]
[ext_resource type="AudioStream" uid="uid://dqalv65owss4e" path="res://assets/audio/switch6.ogg" id="8_3eh2a"]
[ext_resource type="AudioStream" uid="uid://cayjctfo124xw" path="res://assets/audio/switch7.ogg" id="9_vkch3"]
[ext_resource type="AudioStream" uid="uid://b32hasowaslet" path="res://assets/audio/switch8.ogg" id="10_s004p"]
[ext_resource type="AudioStream" uid="uid://dloy86dq7qdpn" path="res://assets/audio/switch9.ogg" id="11_vola5"]
[ext_resource type="AudioStream" uid="uid://k6slwwvno4mu" path="res://assets/audio/switch10.ogg" id="12_bgqdx"]
[ext_resource type="Texture2D" uid="uid://dpofngswr1f5w" path="res://scenes/game_objects/experience_vial/experience_vial.png" id="13_v3in8"]
[ext_resource type="PackedScene" uid="uid://tp0lkwbveqxd" path="res://scenes/ui/sound_button.tscn" id="14_1h064"]

[sub_resource type="Animation" id="Animation_6kpfy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_53u20"]
resource_name = "bounce_in"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.025, 0.175, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.3, 1.3), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tq52s"]
_data = {
"RESET": SubResource("Animation_6kpfy"),
"bounce_in": SubResource("Animation_53u20")
}

[sub_resource type="Animation" id="Animation_ug0kw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1u1rg"]
resource_name = "selected"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 2.92817, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.25, 1.25), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0872665, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5xagv"]
_data = {
"RESET": SubResource("Animation_ug0kw"),
"selected": SubResource("Animation_1u1rg")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fs1gk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l31ek"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kt46s"]
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.458824, 0.890196, 1, 1)
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="MetaUpgradeCard" type="PanelContainer" groups=["meta_upgrade_cards"]]
custom_minimum_size = Vector2(200, 0)
offset_right = 200.0
offset_bottom = 220.0
pivot_offset = Vector2(85, 75)
mouse_filter = 1
script = ExtResource("1_jcci8")

[node name="RandomClickSound" parent="." instance=ExtResource("2_35k3o")]
audio_streams = Array[AudioStream]([ExtResource("8_3eh2a"), ExtResource("9_vkch3"), ExtResource("10_s004p"), ExtResource("11_vola5"), ExtResource("12_bgqdx")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tq52s")
}

[node name="HoverAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5xagv")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueFontOutline"
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 32
text = "Upgrade name"
vertical_alignment = 1
autowrap_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_fs1gk")

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"BlueFontOutline"
theme_override_colors/font_outline_color = Color(0.148438, 0.167969, 0.265625, 1)
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 4
theme_override_constants/line_spacing = 2
text = "This is where a description of the text that will be displayed here will exists."
autowrap_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_l31ek")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 7

[node name="ProgressLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_type_variation = &"BlueFontOutline"
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 4
text = "50/200"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer3/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressToPurchase" type="ProgressBar" parent="MarginContainer/VBoxContainer/PanelContainer3/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_kt46s")
max_value = 1.0
step = 0.1
value = 0.5
show_percentage = false

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/PanelContainer3/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer3/VBoxContainer/MarginContainer/Control"]
layout_mode = 2
offset_left = -9.0
offset_top = -7.0
offset_right = 7.0
offset_bottom = 9.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("13_v3in8")

[node name="PurchaseButton" parent="MarginContainer/VBoxContainer/PanelContainer3/VBoxContainer" instance=ExtResource("14_1h064")]
unique_name_in_owner = true
layout_mode = 2
text = "Purchase"
